@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree string="Views Tree Expanded State">
+<tree string="Views Tree State">
     <field name="model"/>
     <field name="domain"/>
     <field name="user"/>
